// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should match the snapshot if the card is favorited 1`] = `
<div
  className="card-list"
>
  <section
    className="card"
  >
    <img
      alt=""
      className="favorite-img"
      onClick={[Function]}
      src="favorite.svg"
    />
    <h1
      className="small-cards-h1"
    >
      Luke Skywalker
    </h1>
    <h4
      className="small-card-labels"
    >
      Homeworld: 
      <p
        className="small-card-values"
      >
        Tatooine
      </p>
    </h4>
    <h4
      className="small-card-labels"
    >
      Species: 
      <p
        className="small-card-values"
      >
        Human
      </p>
    </h4>
    <h4
      className="small-card-labels"
    >
      Population: 
      <p
        className="small-card-values"
      >
        200000
      </p>
    </h4>
    <h4
      className="small-card-labels"
    >
      Terrain: 
      <p
        className="small-card-values"
      >
        grasslands, mountains
      </p>
    </h4>
    <h4
      className="small-card-labels"
    >
      Climate: 
      <p
        className="small-card-values"
      >
        temperate
      </p>
    </h4>
    <h4
      className="small-card-labels"
    >
      Model: 
      <p
        className="small-card-values"
      >
        Digger Crawler
      </p>
    </h4>
    <h4
      className="small-card-labels"
    >
      Vehicle Class: 
      <p
        className="small-card-values"
      >
        wheeled
      </p>
    </h4>
    <h4
      className="small-card-labels"
    >
      Number of Passengers: 
      <p
        className="small-card-values"
      >
        30
      </p>
    </h4>
  </section>
</div>
`;

exports[`Card should match the snapshot with all data passed in correctly 1`] = `
<div
  className="card-list"
>
  <section
    className="card"
  >
    <img
      alt=""
      className="favorite-img"
      onClick={[Function]}
      src="isNotFavorite.svg"
    />
    <h1
      className="small-cards-h1"
    >
      Luke Skywalker
    </h1>
    <h4
      className="small-card-labels"
    >
      Homeworld: 
      <p
        className="small-card-values"
      >
        Tatooine
      </p>
    </h4>
    <h4
      className="small-card-labels"
    >
      Species: 
      <p
        className="small-card-values"
      >
        Human
      </p>
    </h4>
    <h4
      className="small-card-labels"
    >
      Population: 
      <p
        className="small-card-values"
      >
        200000
      </p>
    </h4>
    <h4
      className="small-card-labels"
    >
      Terrain: 
      <p
        className="small-card-values"
      >
        grasslands, mountains
      </p>
    </h4>
    <h4
      className="small-card-labels"
    >
      Climate: 
      <p
        className="small-card-values"
      >
        temperate
      </p>
    </h4>
    <h4
      className="small-card-labels"
    >
      Residents: 
      <p
        className="small-card-values"
      />
    </h4>
    <h4
      className="small-card-labels"
    >
      Model: 
      <p
        className="small-card-values"
      >
        Digger Crawler
      </p>
    </h4>
    <h4
      className="small-card-labels"
    >
      Vehicle Class: 
      <p
        className="small-card-values"
      >
        wheeled
      </p>
    </h4>
    <h4
      className="small-card-labels"
    >
      Number of Passengers: 
      <p
        className="small-card-values"
      >
        30
      </p>
    </h4>
  </section>
</div>
`;
